After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778262 - Wrong remove on the ring/strip objects
Wrong remove on the ring/strip objects
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2017-02-07 06:12 UTC by Peter Hutterer
Modified: 2017-02-07 13:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-wayland-fix-copy-pasto-sending-tool-removed-on-rings.patch (1.54 KB, patch)
2017-02-07 06:12 UTC, Peter Hutterer
committed Details | Review

Description Peter Hutterer 2017-02-07 06:12:43 UTC
Created attachment 345082 [details] [review]
0001-wayland-fix-copy-pasto-sending-tool-removed-on-rings.patch

meta_wayland_tablet_pad_ring_free() calls zwp_tablet_tool_v2_send_removed() on the ring objects, causing the server to be unhappy, with lots of tears being shed before a mic drop after a final message of

Fatal server error:
(EE) message too short, object (193), message (null)(zwp_tablet_pad_ring_v2)

Since that's arguably bad user experience, and making the message longer wasn't in the budget, I figured removing the bad call is the best option ;)

The same copy/pasto is in the strip code, attached patch removes both.
Comment 1 Rui Matos 2017-02-07 13:36:52 UTC
Review of attachment 345082 [details] [review]:

looks good, thanks